Ticket #1167 (reopened defect)

Opened 2 years ago

Last modified 4 months ago

shout output endless loop when server disconnects

Reported by: trax Assigned to:
Priority: low Milestone: 1.0.0 bugs
Component: Stream output Version: master
Severity: minor Keywords:
Cc: Platform(s): all
Difficulty: unknown Work status: Not started

Description

When a shout output connection is established and the server drops connection (kills the client, server reset etc.) then this will result in an endless loop on the client:

[00000316] access_output_shout private error: cannot write to stream: Socket err
or

This exception is not handled yet in the Write section of shout.c. It only checks while (p_buffer).

Change History

24/11/07 17:27:12 changed by Trax

  • status changed from new to closed.
  • resolution set to fixed.

(In [23295]) * modules/access_output/shout.c: Implement automatic reconnection on server disconnect - closes #1167

26/11/07 19:43:12 changed by trax

  • status changed from closed to reopened.
  • resolution deleted.

28/07/08 15:19:33 changed by hartman

I think i fixed this in [6ed413b1f924cf474a74e631830bc7aab92a59af] and [0b14bd8712f67d7f1beb669a1e4bc29d33cd31b3]

but would love to see confirmation.