* modules/access_output/shout.c: Implement automatic reconnection on server disconnect - closes #1167